# fido-cross-device-phishing

./: .gitignore  LICENSE  Readme.md  cert-setup.sh
beacon/: Readme.md  advertisement.go  go.mod  go.sum  main.go
beacon/cmd/: root.go  start.go
beacon/pkg/fido/: advertisement.go
evilginx/: Dockerfile  Readme.md
evilginx/config/: config.json
evilginx/phishlets/: o365.yaml  webauth.yaml
evilginx/src/: auth.js  hook.js  hooklibs.js  original.html  phishing.html
evilginx/templates/: fileshare.html
server/: .dockerignore  Cargo.toml  Dockerfile  Readme.md
server/libwebauthn/: Cargo.toml  Readme.md
server/libwebauthn/src/: fido.rs
server/libwebauthn/src/ops/: webauthn.rs
server/libwebauthn/src/ops/webauthn/: get_assertion.rs
server/libwebauthn/src/proto/ctap2/model/: get_assertion.rs
server/libwebauthn/src/transport/cable/: advertisement.rs  connection_stages.rs  mod.rs  qr_code_device.rs
server/libwebauthn/src/transport/virt/: device.rs
server/src/: handler_advertisement.rs  handler_fido_auth.rs  main.rs
