[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-auth = "0.8"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
base64 = "0.22.1"
rand = "0.9.2"
axum-server = { version = "0.7.2", features = ["tls-rustls"]}
rustls = "0.23.31"
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
serde_bytes = "0.11.5"
serde_json = "1.0.143"
sha2 = "0.10.9"
ts-io ={ version = "0.2.0", features = ["serde"] }
libwebauthn = {path = "libwebauthn"}
uuid = { version = "1.18.1", features = ["v4"] }
env_logger = "0.11.8"
log = "0.4.28"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
clap = { version = "4.5.48", features = ["derive"] }
